<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.AppActivity">

    <RelativeLayout
        android:id='@+id/top'
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/app_text"
            android:textColor="@color/midBlack"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/tag0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/tag0"
            android:textColor="@color/midGray"
            android:textSize="12sp" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button"
        android:layout_below="@+id/top"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_line_gray"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tag1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/tag1"
                    android:textColor="@color/moreDarkBlack"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tag1_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:padding="4dp"
                    android:text="@string/tag1_info"
                    android:textColor="@color/add_color"
                    android:textSize="14sp" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tag2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/tag2"
                    android:textColor="@color/moreDarkBlack"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tag2_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:padding="4dp"
                    android:text="@string/tag2_info"
                    android:textColor="@color/add_color"
                    android:textSize="14sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tag3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/tag3"
                    android:textColor="@color/moreDarkBlack"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tag3_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:padding="4dp"
                    android:text="@string/tag3_info"
                    android:textColor="@color/add_color"
                    android:textSize="14sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tag4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/tag4"
                    android:textColor="@color/moreDarkBlack"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tag4_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:padding="4dp"
                    android:text="@string/tag4_info"
                    android:textColor="@color/add_color"
                    android:textSize="14sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tag5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/tag5"
                    android:textColor="@color/moreDarkBlack"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tag5_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:padding="4dp"
                    android:text="@string/tag5_info"
                    android:textColor="@color/add_color"
                    android:textSize="14sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tag6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/tag6"
                    android:textColor="@color/moreDarkBlack"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tag6_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:padding="4dp"
                    android:text="@string/tag6_info"
                    android:textColor="@color/add_color"
                    android:textSize="14sp" />


            </RelativeLayout>


        </LinearLayout>
    </ScrollView>


    <Button
        android:id='@+id/button'
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/selector_black"
        android:text="@string/alert_back"
        android:textColor="@color/background"
        android:textSize="18sp" />


</RelativeLayout>