<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.FontActivity">

    <RelativeLayout
        android:id='@+id/top'
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/font_text"
            android:textColor="@color/midBlack"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/font_tag0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/font_tag0"
            android:textColor="@color/midGray"
            android:textSize="12sp" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button"
        android:layout_below="@+id/top"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_line_gray"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/font_tag1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/font_tag1"
                    android:textColor="@color/moreDarkBlack"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/font_tag1_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:padding="4dp"
                    android:text="@string/font_tag1_info"
                    android:textColor="@color/add_color"
                    android:textSize="14sp" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/font_tag2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/font_tag2"
                    android:textColor="@color/moreDarkBlack"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/font_tag2_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:padding="4dp"
                    android:text="@string/font_tag2_info"
                    android:textColor="@color/add_color"
                    android:textSize="14sp" />


            </RelativeLayout>




        </LinearLayout>
    </ScrollView>


    <Button
        android:id='@+id/button'
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/selector_black"
        android:text="@string/alert_back"
        android:textColor="@color/background"
        android:textSize="18sp" />


</RelativeLayout>