<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <LinearLayout
        android:id="@+id/guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/backBtn"
            android:text="@string/title_text_buy"
            android:textColor="@color/moreMidBlack"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/guide_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp"
                android:lineSpacingExtra="0.3dp"
                android:text="@string/guide_text"
                android:textColor="@color/midGray"
                android:textSize="13sp" />

        </RelativeLayout>



    </LinearLayout>


    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/guide"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/shortGray" />



    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/line1"
        android:layout_below="@+id/line2"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:divider="@null"
        android:dividerHeight="3dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:scrollbars="none" />


    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/button"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/shortGray" />


    <Button
        android:id='@+id/button'
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/selector_black"
        android:text="@string/text_select"
        android:textColor="@color/background"
        android:textSize="18sp" />

</RelativeLayout>